Attempted fixing issue of schedule in [Anime List] not aligning to the right.

--- a/styles/anime-list.css
+++ b/styles/anime-list.css
@@ -52,6 +52,7 @@
 
 .instance-schedule-next li {
     margin-left: 20px;
+    text-align: right;
 }
 
 /* ======================================================================
